udpate gc